[package]
name = "cursython"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "^0.2.10"
ron = "^0.8.0"
serde_json = "^1.0.103"
serde = { version = "^1.0.171", features = [ "derive" ] }
dyn-clone = "^1.0.12"
color-eyre = "^0.6.2"
clap = { version = "^4.3.17", features = [ "derive" ] }
#cast_trait_object = "0.1.3"
